# WNS-Project

./: README.md
client/: index.html  package-lock.json  package.json
client/src/: App.svelte  app.css
client/src/assets/: markers.js
client/src/data/: mock.json
client/src/lib/components/: Map.svelte  Navbar.svelte
client/src/mappers/flights/: index.js
client/src/services/: fetch.js
client/src/store/: flightsStore.js
server/: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.in  setup.py
server/src/: app.py  cache.py
server/src/tasks/: __init__.py  app.py
