[tool.poetry]
name = "wns-server"
version = "0.1.0"
description = ""
authors = ["tkastelan <tonino9kas@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
celery = {extras = ["redis"], version = "^5.3.4"}
uvicorn = "^0.23.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

